service-ingress-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    name: http
  selector:
    app: web
    version: v1

---
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    name: http
  selector:
    app: web
    version: v2

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: web1.example.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: web1
            port:
              name: http
        pathType: ImplementationSpecific
  - host: web2.example.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: web2
            port:
              name: http
        pathType: ImplementationSpecific
  tls:
  - secretName: web-tls
    hosts:
    - web1.example.com
    - web2.example.com
